# pesg-starter

./: .gitignore  README.md  package-lock.json  package.json  pesg-starter.code-workspace  pnpm-lock.yaml  test.db
apps/docs/: docusaurus.config-init.ts  docusaurus.config.ts  package.json
apps/frontend/: .gitignore  package.json
frontend/: .gitignore
learning/python/: pyproject.toml
learning/python/basic/: aaa.txt  bp_005_list.ipynb  bp_019_func.ipynb  bp_021_parmdefault.ipynb  bp_024_args.ipynb  bp_025_funcreturn.ipynb  bp_026_var.ipynb  bp_029_module.ipynb  bp_030_object.ipynb  bp_032_private.ipynb  bp_033_decorator.ipynb  bp_034_privateproperty.ipynb  bp_035_EverythingisObject.ipynb  bp_036_inheritancebasic.ipynb  bp_061_exception.ipynb  bp_module1.py  python函数_01.ipynb  test.py  test02.py  test_openrouter_billing.py
learning/python/mini-projects/: cmidata.ipynb  dailyclothes.py
learning/python/mini-projects/cmi/: analyze_deposit.py  ar_aging_20260624.csv  cmidata.ipynb  cmidata_01_aging.ipynb  deposit.ipynb  deposit_analysis.csv  deposit_analysis.json  deposit_analysis.xlsx  import_aging.py  llm_config.py  信用审批Case筛选及审批记录导出需求_202606.xlsx
learning/python/mini-projects/investforlife/: adjustments.sql  cn_stock.db  daily_klines.sql  fund.db  index_constituents.sql  init_fund_db.py  schema.sql  securites.sql  strategy_signals.sql  test.ipynb  test.py  test2.py  test_fund_110011.py  update_log.sql
learning/python/mini-projects/investforlife/output/: 110011_分红.csv  110011_单位净值.csv  110011_持仓.csv  110011_累计净值.csv
learning/python/notes/: setup-env.md
(+354 files in other folders)
