[project]
name = "python"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.18.64",
    "baostock>=0.9.2",
    "duckdb>=1.5.4",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "tickflow>=0.1.22",
    "pdfplumber>=0.11.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "requests>=2.31.0",
]
